--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,29 @@
-# Intellij files
-.idea
-*.iml
+target/
 
-# generated
-target
-
-# maven utils
+### mvn ###
 mvnw
 mvnw.cmd
 .mvn
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
