--- a/SEBASTIAN/pom.xml
+++ b/SEBASTIAN/pom.xml
@@ -79,6 +79,12 @@
 			<artifactId>NfvoCommonDriver</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>it.nextworks.nfvmano</groupId>
+			<artifactId>logging-nfvo-driver</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
