First complete version of SEB, still to be tested

--- a/SEBASTIAN/src/main/resources/application.properties
+++ b/SEBASTIAN/src/main/resources/application.properties
@@ -25,3 +25,6 @@ translator.type=BASIC
 
 arbitrator.type=BASIC
 
+#polling period for TIMEO NFVO operations in seconds
+sebastian.nfvo.timeo.polling=20
+
