Added SEB test for EuCNC demo

--- a/SEBASTIAN/src/main/resources/application.properties
+++ b/SEBASTIAN/src/main/resources/application.properties
@@ -15,9 +15,9 @@ sebastian.localTmpDir=/tmp
 
 sebastian.admin=admin
 
-#nfvo.type=TIMEO
+nfvo.type=TIMEO
 #nfvo.type=OSM
-nfvo.type=DUMMY
+#nfvo.type=DUMMY
 
 nfvo.address=localhost
 
