security: add security config

--- a/SEBASTIAN/src/main/resources/application.properties
+++ b/SEBASTIAN/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.rabbitmq.host=localhost
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto = update
 
+# Available: BCRYPT - NOOP
+security.passwordEncoder=BCRYPT
+
 sebastian.localTmpDir=/tmp
 
 sebastian.admin=admin
