CORE: add NFVO GUI connectors + examples (stub, timeo)

--- a/SEBASTIAN/src/main/resources/application.properties
+++ b/SEBASTIAN/src/main/resources/application.properties
@@ -25,6 +25,12 @@ nfvo.type=TIMEO
 
 nfvo.address=localhost
 
+nfvogui.type=TIMEO
+#nfvogui.type=NONE
+
+nfvogui.address=localhost
+nfvogui.port=80
+
 translator.type=BASIC
 
 arbitrator.type=BASIC
