Added policy management

--- a/SEBASTIAN/pom.xml
+++ b/SEBASTIAN/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>NfvManoLibsIfa13NsLcmIf</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NfvManoLibsPolicyMgtIf</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
