SOLVED NfvoLcmDriver configuration issues and added agreggator

--- a/refactor/SEBASTIAN_CORE/src/main/resources/application.properties
+++ b/refactor/SEBASTIAN_CORE/src/main/resources/application.properties
@@ -23,6 +23,12 @@ nfvo.catalogue.type=TIMEO
 #nfvo.catalogue.type=DUMMY
 #nfvo.catalogue.type=LOGGING
 
+nfvo.lcm.type=TIMEO
+#nfvo.lcm.type=OSM
+#nfvo.lcm.type=DUMMY
+#nfvo.lcm.type=LOGGING
+
+
 nfvo.catalogue.address=localhost
 nfvo.lcm.address=localhost
 
