Updated mgm catalogue utilities and dependencies

--- a/refactor/BLUEPRINTS_CATALOGUE/pom.xml
+++ b/refactor/BLUEPRINTS_CATALOGUE/pom.xml
@@ -79,7 +79,13 @@
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 
-		
+		<dependency>
+			<groupId>it.nextworks.nfvmano</groupId>
+			<artifactId>SebastianMgmtCatalogue</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>it.nextworks.nfvmano</groupId>
 			<artifactId>NfvoCatalogueService</artifactId>
