--- a/refactor/SEBASTIAN_CORE/pom.xml
+++ b/refactor/SEBASTIAN_CORE/pom.xml
@@ -170,6 +170,18 @@
             <artifactId>commons-compress</artifactId>
             <version>1.2</version>
         </dependency>
+        <!-- Swagger dependencies  -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
