--- a/refactor/SEBASTIAN_CORE/pom.xml
+++ b/refactor/SEBASTIAN_CORE/pom.xml
@@ -132,6 +132,11 @@
         </dependency>
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>EveportalCatalogue</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>SebastianMgmtCatalogue</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
