--- a/refactor/VS_BLUEPRINTS_CATALOGUE_INTERFACES/pom.xml
+++ b/refactor/VS_BLUEPRINTS_CATALOGUE_INTERFACES/pom.xml
@@ -66,7 +66,7 @@
 
 		<dependency>
 			<groupId>it.nextworks.nfvmano</groupId>
-			<artifactId>BlueprintsLibs</artifactId>
+			<artifactId>VsBlueprintsIM</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 
