--- a/refactor/NFVO_CATALOGUE_SERVICE/pom.xml
+++ b/refactor/NFVO_CATALOGUE_SERVICE/pom.xml
@@ -64,6 +64,12 @@
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 	</dependencies>
 
 
