--- a/refactor/pom.xml
+++ b/refactor/pom.xml
@@ -22,6 +22,13 @@
       <module>VS_BLUEPRINTS_CATALOGUE_INTERFACES</module>
       <module>VS_BLUEPRINTS_CATALOGUE</module>
       <module>SEBASTIAN_CORE</module>
+        <module>ARBITRATOR_INTERFACES</module>
+        <module>ARBITRATOR_SERVICE</module>
+        <module>CommonElements</module>
+        <module>RecordService</module>
+        <module>RecordServiceIM</module>
+        <module>TranslatorService</module>
+        <module>SecurityService</module>
     </modules>
 </project>
 
