V and N split succesfully

--- a/refactor/SEBASTIAN_CORE/src/main/resources/application.properties
+++ b/refactor/SEBASTIAN_CORE/src/main/resources/application.properties
@@ -43,6 +43,8 @@ translator.type=BASIC
 
 arbitrator.type=BASIC
 
+vertical.network.communication=LOCAL
+
 #polling period for TIMEO NFVO operations in seconds
 sebastian.nfvo.timeo.polling=20
 
