--- a/refactor/SEBASTIAN_CORE/pom.xml
+++ b/refactor/SEBASTIAN_CORE/pom.xml
@@ -6,7 +6,8 @@
     <groupId>it.nextworks.nfvmano</groupId>
     <artifactId>SebastianCore</artifactId>
     <version>0.0.2-SNAPSHOT</version>
-    <packaging>jar</packaging>
+
+    <packaging>pom</packaging>
 
     <name>SEBASTIAN_CORE</name>
     <description>Vertical Slicer</description>
@@ -23,6 +24,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
+
+
+
 
     <dependencies>
 
