local comm service completed

--- a/refactor/pom.xml
+++ b/refactor/pom.xml
@@ -29,6 +29,7 @@
         <module>RecordServiceIM</module>
         <module>TranslatorService</module>
         <module>SecurityService</module>
+        <module>VNComService</module>
     </modules>
 </project>
 
