--- a/refactor/NSFM_SERVICE/pom.xml
+++ b/refactor/NSFM_SERVICE/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.nextworks.nfvmano</groupId>
-    <artifactId>TranslatorService</artifactId>
+    <artifactId>NSFM_SERVICE</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -31,8 +31,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <name>TranslatorService</name>
-
+    <name>NSFM_SERVICE</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,25 +41,75 @@
 
     <dependencies>
         <dependency>
-            <groupId>it.nextworks.nfvmano</groupId>
-            <artifactId>VsBlueprintsCatalogue</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j</artifactId>
+            <version>1.3.8.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>NfvManoLibsCommon</artifactId>
             <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NSFM_INTERFACES</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
 
         </dependency>
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
-            <artifactId>VsBlueprintsCatalogueInterfaces</artifactId>
+            <artifactId>RecordService</artifactId>
             <version>0.0.2-SNAPSHOT</version>
 
         </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NfvoLcmService</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
 
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>CommonElements</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>VNComService</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
@@ -70,5 +119,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
