--- a/refactor/VSFM_SERVICE/pom.xml
+++ b/refactor/VSFM_SERVICE/pom.xml
@@ -87,6 +87,12 @@
         </dependency>
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NSFM_INTERFACES</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>RecordService</artifactId>
             <version>0.0.2-SNAPSHOT</version>
 
