--- a/SEBASTIAN/NSFM_IM/pom.xml
+++ b/SEBASTIAN/NSFM_IM/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.nextworks.nfvmano</groupId>
-    <artifactId>NSFM_INTERFACES</artifactId>
+    <artifactId>NSFM_IM</artifactId>
     <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
