--- a/SEBASTIAN/CommonElements/pom.xml
+++ b/SEBASTIAN/CommonElements/pom.xml
@@ -51,13 +51,12 @@
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>TranslatorService</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.2-EVE-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>RecordServiceIM</artifactId>
             <version>0.0.2-SNAPSHOT</version>
-
         </dependency>
 
     </dependencies>
