--- a/SEBASTIAN/NSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/NSFM_SERVICE/pom.xml
@@ -81,10 +81,17 @@
         </dependency>
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
-            <artifactId>NSFM_IM</artifactId>
+            <artifactId>NSFM_INTERFACES</artifactId>
             <version>0.0.2-SNAPSHOT</version>
 
         </dependency>
+
+	<dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NsTemplatesCatalogue</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>RecordService</artifactId>
