--- a/SEBASTIAN/SEBASTIAN_CORE/src/main/resources/application.properties
+++ b/SEBASTIAN/SEBASTIAN_CORE/src/main/resources/application.properties
@@ -32,6 +32,11 @@ nfvo.lcm.type=TIMEO
 nfvo.catalogue.address=10.0.8.46
 nfvo.lcm.address=10.0.8.46
 
+#not used here
+nfvo.lcm.notification.url=
+
+nfvo.lcm.polling=60
+
 
 
 nfvogui.type=TIMEO
@@ -52,3 +57,5 @@ nfvo.catalogue.username=test
 nfvo.catalogue.password=test
 nfvo.catalogue.project=test
 catalogue.admin=admin
+
+authentication.enable=yes
