--- a/SEBASTIAN/pom.xml
+++ b/SEBASTIAN/pom.xml
@@ -18,13 +18,15 @@
         <module>CommonElements</module>
         <module>RecordService</module>
         <module>RecordServiceIM</module>
-        <module>TranslatorService</module>
-        <module>SecurityService</module>
-        <module>VNComService</module>
+<!--        <module>TranslatorService</module> -->
+<!--        <module>SecurityService</module> -->
+<!--        <module>VNComService</module>    -->
         <module>VSFM_INTERFACES</module>
         <module>VSFM_SERVICE</module>
         <module>NSFM_INTERFACES</module>
         <module>NSFM_SERVICE</module>
+        <module>NSMF_APP</module>
+        <module>VSMF_APP</module>
       <module>SEBASTIAN_CORE</module>
 
     </modules>
