--- a/SEBASTIAN/SEBASTIAN_CORE/pom.xml
+++ b/SEBASTIAN/SEBASTIAN_CORE/pom.xml
@@ -190,7 +190,7 @@
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>VsBlueprintsCatalogue</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.2-EVE-SNAPSHOT</version>
         </dependency>
 
         <dependency>
