--- a/SEBASTIAN/VSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/VSFM_SERVICE/pom.xml
@@ -74,11 +74,7 @@
             <artifactId>spring-boot-starter-log4j</artifactId>
             <version>1.3.8.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>it.nextworks.nfvmano</groupId>
-            <artifactId>NfvManoLibsCommon</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
-        </dependency>
+        
         <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>VSFM_INTERFACES</artifactId>
@@ -121,7 +117,12 @@
             <version>0.0.2-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-
+		<dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>TranslatorService</artifactId>
+            <version>0.0.2-EVE-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
