--- a/SEBASTIAN/VNComService/pom.xml
+++ b/SEBASTIAN/VNComService/pom.xml
@@ -64,6 +64,11 @@
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>NfvoLcmService</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
