--- a/SEBASTIAN/VSMF_APP/pom.xml
+++ b/SEBASTIAN/VSMF_APP/pom.xml
@@ -10,7 +10,7 @@
   <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
+		<version>2.0.3.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -21,11 +21,38 @@
 	</properties>
   
   <dependencies>
-  	<dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-test</artifactId>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <scope>runtime</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-jpa</artifactId>
+      </dependency>
+
+      <dependency>
             <groupId>it.nextworks.nfvmano</groupId>
             <artifactId>VSFM_SERVICE</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
+
+      <dependency>
+          <groupId>it.nextworks.nfvmano</groupId>
+          <artifactId>NSFM_SERVICE</artifactId>
+          <version>0.0.2-SNAPSHOT</version>
+      </dependency>
+
+
   </dependencies>
   
    <build>
