Updated pom VSMF service

--- a/SEBASTIAN/VSFM_INTERFACES/pom.xml
+++ b/SEBASTIAN/VSFM_INTERFACES/pom.xml
@@ -104,6 +104,16 @@
             <version>0.0.2-SNAPSHOT</version>
 
         </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>VsBlueprintsIM</artifactId>
+            <version>0.0.2-EVE-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>it.nextworks.nfvmano</groupId>
+            <artifactId>EveBlueprintsIM</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
