--- a/SEBASTIAN/NSMF_APP/src/main/resources/application.properties
+++ b/SEBASTIAN/NSMF_APP/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/sebastian
+spring.datasource.url= jdbc:postgresql://localhost:5432/sebastian_nsp
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -18,26 +18,25 @@ sebastian.localTmpDir=/tmp
 
 sebastian.admin=admin
 
-nfvo.catalogue.type=TIMEO
+#nfvo.catalogue.type=TIMEO
 #nfvo.catalogue.type=OSM
-#nfvo.catalogue.type=DUMMY
+nfvo.catalogue.type=DUMMY
 #nfvo.catalogue.type=LOGGING
 
-nfvo.lcm.type=TIMEO
-#nfvo.lcm.type=OSM
+#nfvo.lcm.type=TIMEO
+nfvo.lcm.type=NMRO
 #nfvo.lcm.type=DUMMY
 #nfvo.lcm.type=LOGGING
 
 #not used here
 nfvo.lcm.notification.url=
 
-nfvo.lcm.polling=60
+nfvo.lcm.polling=10
 
+nfvo.catalogue.address=10.20.8.25
+nfvo.lcm.address=10.30.8.76
 
-nfvo.catalogue.address=10.0.8.46
-nfvo.lcm.address=10.0.8.46
-
-vsmf.notifications.url=http://localhost:8082
+vsmf.notifications.url=http://10.30.8.54:8081
 
 nfvogui.type=TIMEO
 #nfvogui.type=NONE
@@ -52,10 +51,11 @@ arbitrator.type=BASIC
 vertical.network.communication=LOCAL
 
 #polling period for TIMEO NFVO operations in seconds
-sebastian.nfvo.timeo.polling=20
+sebastian.nfvo.timeo.polling=10
 nfvo.catalogue.username=test
 nfvo.catalogue.password=test
 nfvo.catalogue.project=test
 catalogue.admin=admin
 
 authentication.enable=yes
+ssoNmroIntegration=true
