--- a/SEBASTIAN/VSMF_APP/pom.xml
+++ b/SEBASTIAN/VSMF_APP/pom.xml
@@ -26,6 +26,12 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
           <scope>test</scope>
+          <exclusions>
+              <exclusion>
+                  <groupId>ch.qos.logback</groupId>
+                  <artifactId>logback-classic</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
       <dependency>
           <groupId>org.postgresql</groupId>
@@ -55,8 +61,7 @@
 
 
   </dependencies>
-  
-   <build>
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
