--- a/SEBASTIAN/VSMF_APP/src/test/resources/application.properties
+++ b/SEBASTIAN/VSMF_APP/src/test/resources/application.properties
@@ -1,31 +1,30 @@
-
-spring.datasource.url= jdbc:postgresql://localhost:5432/sebastian_dsp
+spring.datasource.url= jdbc:postgresql://localhost:5432/sebastian
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 ##BINDING TOMCAT ON MANAGEMENT IP ADDRESS
 #server.address=
-server.port=8081
+server.port=8082
 
 spring.rabbitmq.host=localhost
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto = update
 
 # Available: BCRYPT - NOOP
 security.passwordEncoder=BCRYPT
 
-#sebastian.localTmpDir=/tmp
+sebastian.localTmpDir=/tmp
 
 sebastian.admin=admin
 
-#nfvo.catalogue.type=TIMEO
+nfvo.catalogue.type=TIMEO
 #nfvo.catalogue.type=OSM
-nfvo.catalogue.type=DUMMY
+#nfvo.catalogue.type=DUMMY
 #nfvo.catalogue.type=LOGGING
 
-#nfvo.lcm.type=TIMEO
-nfvo.lcm.type=NMRO
+nfvo.lcm.type=TIMEO
+#nfvo.lcm.type=OSM
 #nfvo.lcm.type=DUMMY
 #nfvo.lcm.type=LOGGING
 
@@ -35,11 +34,13 @@ nfvo.lcm.notification.url=
 nfvo.lcm.polling=60
 
 
-nfvo.catalogue.address=10.20.8.25
-nfvo.lcm.address=10.30.8.76
+nfvo.catalogue.address=10.0.8.46
+nfvo.lcm.address=10.0.8.46
 
-#nfvogui.type=TIMEO
-nfvogui.type=NONE
+vsmf.notifications.url=http://localhost:8082
+
+nfvogui.type=TIMEO
+#nfvogui.type=NONE
 
 nfvogui.address=localhost
 nfvogui.port=80
@@ -52,11 +53,11 @@ vertical.network.communication=LOCAL
 
 #polling period for TIMEO NFVO operations in seconds
 sebastian.nfvo.timeo.polling=20
-#nfvo.catalogue.username=test
-#nfvo.catalogue.password=test
-#nfvo.catalogue.project=test
+nfvo.catalogue.username=test
+nfvo.catalogue.password=test
+nfvo.catalogue.project=test
 catalogue.admin=admin
 
 authentication.enable=yes
-nsmf.restnbi.url=http://10.30.8.76:8082
-ssoNmroIntegration=true
+
+nsmf.restnbi.url=http://localhost:8082
