--- a/SEBASTIAN/NSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/NSFM_SERVICE/pom.xml
@@ -127,6 +127,12 @@
             <version>0.0.20131108.vaadin1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <version>2.2.2.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
