get nfvo username to interact with NMRO (and thus OSM) from application.properties. Needed in VSMF_APP as well.

--- a/SEBASTIAN/NSMF_APP/src/main/resources/application.properties
+++ b/SEBASTIAN/NSMF_APP/src/main/resources/application.properties
@@ -52,7 +52,7 @@ vertical.network.communication=LOCAL
 
 #polling period for TIMEO NFVO operations in seconds
 sebastian.nfvo.timeo.polling=10
-nfvo.catalogue.username=test
+nfvo.catalogue.username=admin
 nfvo.catalogue.password=test
 nfvo.catalogue.project=test
 catalogue.admin=admin
