--- a/SEBASTIAN/VSMF_APP/src/main/resources/application.properties
+++ b/SEBASTIAN/VSMF_APP/src/main/resources/application.properties
@@ -52,7 +52,7 @@ vertical.network.communication=LOCAL
 
 #polling period for TIMEO NFVO operations in seconds
 sebastian.nfvo.timeo.polling=20
-#nfvo.catalogue.username=test
+nfvo.catalogue.username=admin
 #nfvo.catalogue.password=test
 #nfvo.catalogue.project=test
 catalogue.admin=admin
@@ -60,3 +60,5 @@ catalogue.admin=admin
 authentication.enable=yes
 nsmf.restnbi.url=http://10.30.8.76:8082
 ssoNmroIntegration=true
+flexran.url=""
+ranadapter.url=""
