--- a/SEBASTIAN/NSFM_SERVICE/pom.xml
+++ b/SEBASTIAN/NSFM_SERVICE/pom.xml
@@ -127,6 +127,14 @@
             <version>0.0.20131108.vaadin1</version>
             <scope>compile</scope>
         </dependency>
+
+<dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.1</version>
+        <scope>provided</scope>
+</dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
